# dimensional-experimental

./: GM.hs  KalmanExample.hs  PosVel.lhs  Rotation.hs  VectorAD.hs  VectorADTest.hs  dimensional-experimental.cabal  stack.yaml
Numeric/Units/Dimensional/: AD.hs  AEq.hs  Constants.hs  Formulae.hs
Numeric/Units/Dimensional/LinearAlgebra/: PosVel.hs  PosVel.lhs  Rotation.hs  VectorAD.hs
examples/: G19.hs  GM.hs  KalmanExample.hs
src/Numeric/Units/Dimensional/: AD.hs  Cyclic.hs  Formulae.hs
src/Numeric/Units/Dimensional/LinearAlgebra/: PosVel.hs  Rotation.hs
test/: Doctests.hs  VectorADTest.hs
tests/: PosVelTest.hs
