Name:                dimensional-experimental
Version:             0.9
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2014
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           experimental
Homepage:            http://dimensional.googlecode.com/
Synopsis:

    Modules building on dimensional that do not fit elsewhere (yet).

Description:

    Dimensional-experimental is a grab bag of modules building on
    the dimensional ecosystem that are either very experimental or
    have not found their natural place in another package yet.

Category:            Math, Physics
Build-Type:          Simple
Build-Depends:

    base,
    time,
    dimensional >= 0.12,
    dimensional-vectors >= 0.9,
    numtype,
    HList >= 0.2.1 && <0.3,
    numeric-quest,
    ad >= 4.2 && < 4.3,
    ieee754 >= 0.7.3

Exposed-Modules:

    Numeric.Units.Dimensional.AD
    Numeric.Units.Dimensional.AEq
    Numeric.Units.Dimensional.Constants
    Numeric.Units.Dimensional.Formulae
    Numeric.Units.Dimensional.LinearAlgebra.VectorAD
    Numeric.Units.Dimensional.LinearAlgebra.Rotation
    Numeric.Units.Dimensional.LinearAlgebra.PosVel

Extra-source-files:  README, LICENSE

