Name:                dimensional-experimental
Version:             0.10.0.0
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2014
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           experimental
Homepage:            http://dimensional.googlecode.com/
Synopsis:

    Modules building on dimensional that do not fit elsewhere (yet).

Description:

    Dimensional-experimental is a grab bag of modules building on
    the dimensional ecosystem that are either very experimental or
    have not found their natural place in another package yet.

Category:            Math, Physics
Build-Type:          Simple
Extra-source-files:  README, LICENSE
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  Build-Depends:

    base,
    time,
    ieee754,
    dimensional,
    dimensional-dk-experimental,
    dimensional-homo,
    numtype-dk,
    numeric-quest,
    ad

  Exposed-Modules:

    Numeric.Units.Dimensional.AD
    Numeric.Units.Dimensional.Constants
    Numeric.Units.Dimensional.Cyclic
    Numeric.Units.Dimensional.Formulae
    Numeric.Units.Dimensional.LinearAlgebra.VectorAD
    Numeric.Units.Dimensional.LinearAlgebra.Rotation
    Numeric.Units.Dimensional.LinearAlgebra.PosVel


test-suite doctests
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded
  default-language:    Haskell2010
  hs-source-dirs: test
  main-is:        Doctests.hs
  build-depends:  base
                , doctest >= 0.8
                , Glob
                , ieee754
                , QuickCheck
                , dimensional
                , dimensional-homo